# jinja2-template-processor

./: .gitignore  CHANGELOG.md  CLAUDE.md  Containerfile  DATA_SCHEMA.md  LICENSE  README.md  TEMPLATE_agent-config.md  TEMPLATE_install-config-baremetal.md  clusterfile-editor.sh  devfile.yaml  generate-mac-in-range.sh  process.py  process.sh  requirements.txt
apps/editor/: APP_VERSION  Containerfile  REQUIREMENTS.md  build-standalone.sh  entrypoint.sh  pyproject.toml  run-dev.sh
apps/editor-v2/: pyproject.toml
apps/editor-v2/app/: template_processor.py
apps/editor-v2/static/: index.html
apps/editor-v2/static/css/: app.css
apps/editor-v2/static/js/: app.js  editor.js  form.js  state.js  validator.js
apps/editor-v2/tests/: test_processor.py
apps/editor/app/: __init__.py  main.py  template_processor.py
apps/editor/static/: changelog.md  index.html
apps/editor/static/collateral/: comparison.md  guide.md
apps/editor/static/css/: app.css
apps/editor/static/js/: app.js  editor.js  form.js  help.js  state.js  template-renderer.js
apps/editor/tests/: __init__.py  test_api.py  test_processor.py
data/: acm-hub-sno.clusterfile  acm.clusterfile  agent-nutanix.clusterfile  baremetal-bond-vlan.clusterfile  baremetal-bond.clusterfile  baremetal-compact.clusterfile  baremetal-vlan.clusterfile  baremetal.clusterfile  clusterfile.schema.json  customer.example.aws.clusterfile  customer.example.azure.clusterfile  customer.example.bond.vlan.yaml  customer.example.bond.yaml  customer.example.ibmcloud.clusterfile  customer.example.nutanix.yaml  customer.example.yaml  (+34 more)
(+175 files in other folders)
